force-app/main/default/objects/Case/fields/Counterpart__c.field-meta.xml
<CustomField>
    <fullName>Counterpart__c</fullName>
    <label>Counterpart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AppID Investigation</fullName>
            </value>
            <value>
                <fullName>AppId Delete</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>IMJ</fullName>
            </value>
            <value>
                <fullName>Personal Information Delete</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>