force-app/main/default/objects/Case/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Determine the ISO country code for the case. 
BU:- ALL</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Chile</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Costa Rica</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>Dominican Republic</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Ecuador</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>Guatemala</label>
            </value>
            <value>
                <fullName>HN</fullName>
                <label>Honduras</label>
            </value>
            <value>
                <fullName>JM</fullName>
                <label>Jamaica</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <label>Nicaragua</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>Peru</label>
            </value>
            <value>
                <fullName>PY</fullName>
                <label>Paraguay</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>El Salvador</label>
            </value>
            <value>
                <fullName>TT</fullName>
                <label>Trinidad &amp; Tobago</label>
            </value>
            <value>
                <fullName>UY</fullName>
                <label>Uruguay</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>CW</fullName>
                <label>Curacao</label>
            </value>
            <value>
                <fullName>GD</fullName>
                <label>Grenada</label>
            </value>
            <value>
                <fullName>GY</fullName>
                <label>Guyana</label>
            </value>
            <value>
                <fullName>HT</fullName>
                <label>Haiti</label>
            </value>
            <value>
                <fullName>MQ</fullName>
                <label>Martinique</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <label>Saint Lucia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>