force-app/main/default/objects/Case/fields/Country_For_Partial_Decoding__c.field-meta.xml
<CustomField>
    <fullName>Country_For_Partial_Decoding__c</fullName>
    <label>Date Code Formats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Topo Chico</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>TK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>