force-app/main/default/objects/Case/fields/Coupon_Quantity_Sent__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Quantity_Sent__c</fullName>
    <label>Coupon 1 Quantity Sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>