force-app/main/default/objects/Case/fields/CSC_Chat_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>CSC_Chat_Age_Group__c</fullName>
    <label>CSC Chat Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10s</fullName>
            </value>
            <value>
                <fullName>20s</fullName>
            </value>
            <value>
                <fullName>30s</fullName>
            </value>
            <value>
                <fullName>40s</fullName>
            </value>
            <value>
                <fullName>50s</fullName>
            </value>
            <value>
                <fullName>60s</fullName>
            </value>
            <value>
                <fullName>Over 70s</fullName>
            </value>
            <value>
                <fullName>Please select from the list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>