force-app/main/default/objects/Case/fields/CSC_Chat_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>CSC_Chat_Case_Reason__c</fullName>
    <label>CSC Chat Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Package Quality</fullName>
            </value>
            <value>
                <fullName>Vending Machine/Dispenser</fullName>
            </value>
            <value>
                <fullName>Sales Promotion</fullName>
            </value>
            <value>
                <fullName>Ad</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Please select from the list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>