force-app/main/default/objects/Case/fields/CT_Code__c.field-meta.xml
<CustomField>
    <fullName>CT_Code__c</fullName>
    <label>CT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>