force-app/main/default/objects/Case/fields/Current_Fiscal_Week__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Week__c</fullName>
    <description>This formula calculates the current fiscal week for the year 2021 based on the current date.</description>
    <formula>MOD(FLOOR( (TODAY() - DATEVALUE(&quot;2021-01-02&quot;)) /7),52)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>