force-app/main/default/objects/Case/fields/Damage_Caused__c.field-meta.xml
<CustomField>
    <fullName>Damage_Caused__c</fullName>
    <description>Used for LATAM to capture damage information related to the case. 
BU :- LATAM</description>
    <label>Damage Caused</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>