force-app/main/default/objects/Case/fields/Damage_To_Personal_Property__c.field-meta.xml
<CustomField>
    <fullName>Damage_To_Personal_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damage To Personal Property</label>
    <type>Checkbox</type>
</CustomField>