force-app/main/default/objects/Case/fields/Date_conversion_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Date_conversion_Reporting__c</fullName>
    <description>Lightning Report - Datetime field value for March in leap year is displayed as February in &quot;Calendar Month in Year&quot; in report--(Formula field to convert Date/Time into Date for reporting analysis for Japan).</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date conversion Reporting</label>
    <type>Date</type>
</CustomField>