force-app/main/default/objects/Case/fields/Date_delivered_to_Plant__c.field-meta.xml
<CustomField>
    <fullName>Date_delivered_to_Plant__c</fullName>
    <description>Used for LATAM to capture the date delivered to the plant. 
BU :- LATAM</description>
    <label>Date delivered to Plant</label>
    <type>Date</type>
</CustomField>