force-app/main/default/objects/Case/fields/Date_of_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Compensation__c</fullName>
    <description>Used for LATAM to store the compensation date for the case.
BU :- LATAM</description>
    <label>Date of Compensation</label>
    <type>Date</type>
</CustomField>