force-app/main/default/objects/Case/fields/Date_of_contact_1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_contact_1__c</fullName>
    <description>Used for LATAM to capture the first contact date.
BU :- LATAM</description>
    <label>Date of contact 1</label>
    <type>Date</type>
</CustomField>