force-app/main/default/objects/Case/fields/Date_of_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Contact_2__c</fullName>
    <description>Used for LATAM to capture the Second contact date
BU:- LATAM</description>
    <label>Date of Contact 2</label>
    <type>Date</type>
</CustomField>