force-app/main/default/objects/Case/fields/Date_of_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Contact_3__c</fullName>
    <description>Used for LATAM to capture the third contact date
BU :- LATAM</description>
    <label>Date of Contact 3</label>
    <type>Date</type>
</CustomField>