force-app/main/default/objects/Case/fields/Date_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Purchase__c</fullName>
    <description>Used for LATAM to capture the purchase date.
BU :- LATAM</description>
    <label>Date of Purchase</label>
    <type>Date</type>
</CustomField>