force-app/main/default/objects/Case/fields/Date_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Resolution__c</fullName>
    <description>Used for LATAM to capture the case resolution date. 
BU :- LATAM</description>
    <label>Date of Resolution</label>
    <type>Date</type>
</CustomField>