force-app/main/default/objects/Case/fields/Date_of_scheduling__c.field-meta.xml
<CustomField>
    <fullName>Date_of_scheduling__c</fullName>
    <description>Used for LATAM to store the date on which the case was scheduled. 
BU :- LATAM</description>
    <label>Date of scheduling</label>
    <type>Date</type>
</CustomField>