force-app/main/default/objects/Case/fields/Date_of_Submission_For_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Submission_For_Analysis__c</fullName>
    <label>Date of Submission For Analysis</label>
    <type>DateTime</type>
</CustomField>