force-app/main/default/objects/Case/fields/Date_of_Visit_planned_LATAM__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit_planned_LATAM__c</fullName>
    <description>Used for LATAM to capture the planned visit date. 
BU :- LATAM</description>
    <label>Date of Visit planned</label>
    <type>Date</type>
</CustomField>