force-app/main/default/objects/Case/fields/Date_Time_occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_occurred__c</fullName>
    <label>Date/Time Occurred</label>
    <type>DateTime</type>
</CustomField>