force-app/main/default/objects/Case/fields/Date_Time_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Viewed__c</fullName>
    <label>Date/Time Viewed</label>
    <type>DateTime</type>
</CustomField>