force-app/main/default/objects/Case/fields/Date_Value_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_Value_Created_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Value Created Date</label>
    <type>Date</type>
</CustomField>