force-app/main/default/objects/Case/fields/Day_Code__c.field-meta.xml
<CustomField>
    <fullName>Day_Code__c</fullName>
    <label>Day Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A –Monday</fullName>
            </value>
            <value>
                <fullName>B –Tuesday</fullName>
            </value>
            <value>
                <fullName>C –Wednesday</fullName>
            </value>
            <value>
                <fullName>D –Thursday</fullName>
            </value>
            <value>
                <fullName>E –Friday</fullName>
            </value>
            <value>
                <fullName>F –Saturday</fullName>
            </value>
            <value>
                <fullName>G –Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>