force-app/main/default/objects/Case/fields/Day_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Day_Remaining__c</fullName>
    <description>Used for LATAM to capture remaining days for the case. 
BU :- LATAM</description>
    <formula>IF(
    ISBLANK(Agent_Entered_BBE_Date__c),
    NULL,
				Agent_Entered_BBE_Date__c - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>