force-app/main/default/objects/Case/fields/Days_available__c.field-meta.xml
<CustomField>
    <fullName>Days_available__c</fullName>
    <label>Days available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>