force-app/main/default/objects/Case/fields/Days_difference_b_w_Created_Closed_Dates__c.field-meta.xml
<CustomField>
    <fullName>Days_difference_b_w_Created_Closed_Dates__c</fullName>
    <description>Days difference calculation excluding weekends</description>
    <formula>(5 * ( FLOOR( ( Convert2__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Convert2__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Convert1__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Convert1__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days difference b/w Created/Closed Dates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>