force-app/main/default/objects/Case/fields/Days_Opened_when_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Days_Opened_when_Consumed__c</fullName>
    <label>Days Opened when Consumed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 to 5</fullName>
            </value>
            <value>
                <fullName>6 to 10</fullName>
            </value>
            <value>
                <fullName>11 to 14</fullName>
            </value>
            <value>
                <fullName>&gt; 14</fullName>
            </value>
            <value>
                <fullName>NotAvailable</fullName>
                <default>true</default>
                <label>NotAvailable</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>