force-app/main/default/objects/Case/fields/Dealer_Handlings__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Handlings__c</fullName>
    <label>Dealer Handlings</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>