force-app/main/default/objects/Case/fields/Description_of_Requested_Sample__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Requested_Sample__c</fullName>
    <label>Description of Requested Sample</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>