force-app/main/default/objects/Case/fields/Details_Comments__c.field-meta.xml
<CustomField>
    <fullName>Details_Comments__c</fullName>
    <description>Used for LATAM to store detailed comments for the case. 
BU :- LATAM</description>
    <label>Details &amp; Comments</label>
    <type>TextArea</type>
</CustomField>