force-app/main/default/objects/Case/fields/Digital_Fulfillment_Value__c.field-meta.xml
<CustomField>
    <fullName>Digital_Fulfillment_Value__c</fullName>
    <inlineHelpText>Enter Amount 000.00</inlineHelpText>
    <label>Digital Fulfillment Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>