force-app/main/default/objects/Case/fields/Discoloration_Mark__c.field-meta.xml
<CustomField>
    <fullName>Discoloration_Mark__c</fullName>
    <label>Discoloration Mark</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Not specified</fullName>
                <isActive>false</isActive>
                <label>Not specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>