force-app/main/default/objects/Case/fields/Does_Consumer_Has_Package__c.field-meta.xml
<CustomField>
    <fullName>Does_Consumer_Has_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Consumer Has Package?</label>
    <type>Checkbox</type>
</CustomField>