force-app/main/default/objects/Case/fields/E_Commerce_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce_Client_Number__c</fullName>
    <description>Used for LATAM to capture the eCommerce client number. 
BU :- LATAM</description>
    <label>E-Commerce Client Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>