force-app/main/default/objects/Case/fields/E_mail1__c.field-meta.xml
<CustomField>
    <fullName>E_mail1__c</fullName>
    <formula>Account.Email_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail</label>
    <type>Text</type>
</CustomField>