force-app/main/default/objects/Case/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E-mail (System Field)</label>
    <type>Email</type>
</CustomField>