force-app/main/default/objects/Case/fields/Email_Ids_of_Case_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Email_Ids_of_Case_Team_Members__c</fullName>
    <label>Email Ids of Case Team Members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>