force-app/main/default/objects/Case/fields/Emotion_level__c.field-meta.xml
<CustomField>
    <fullName>Emotion_level__c</fullName>
    <label>Emotion level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Favorable</fullName>
            </value>
            <value>
                <fullName>Somewhat favorable</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>off-putting</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
            <value>
                <fullName>Extremely angry</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Failed to reach agreement</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Slightly dissatisfied</fullName>
            </value>
            <value>
                <fullName>Slightly satisfied</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>