force-app/main/default/objects/Case/fields/Emotional_Damages__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Damages__c</fullName>
    <description>Used for LATAM to capture emotional damage information for the case. 
BU :- LATAM</description>
    <label>Emotional Damages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Psychological shock</fullName>
            </value>
            <value>
                <fullName>Strong anxiety of consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>