force-app/main/default/objects/Case/fields/Enclosure_Letter_Alert__c.field-meta.xml
<CustomField>
    <fullName>Enclosure_Letter_Alert__c</fullName>
    <formula>if(ISPICKVAL(Check_Letter_Generated_or_Not__c,&apos;Letter Not Generated&apos;),IMAGE(&quot;/resource/Letter_Alert&quot;, &quot;Letter Not Generated&quot;,20, 20)+&quot;Letter Not Generated&quot;,
IF(ISPICKVAL(Check_Letter_Generated_or_Not__c,&apos;Letter Generated&apos;),IMAGE(&quot;/resource/letter_alert_green&quot;, &quot;Letter Generated&quot;,20, 20)+&quot;Letter Generated&quot;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enclosure Letter Alert</label>
    <type>Text</type>
</CustomField>