force-app/main/default/objects/Case/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vending Machine</fullName>
            </value>
            <value>
                <fullName>Over the counter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Not Specified</fullName>
                <isActive>false</isActive>
                <label>Not Specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>