force-app/main/default/objects/Case/fields/Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location__c</fullName>
    <label>Purchase Equipment Location</label>
    <type>TextArea</type>
</CustomField>