force-app/main/default/objects/Case/fields/Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Number__c</fullName>
    <label>Equipment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>