force-app/main/default/objects/Case/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Purchase Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BaristaBot</fullName>
            </value>
            <value>
                <fullName>Camera Cooler</fullName>
            </value>
            <value>
                <fullName>Cooler</fullName>
            </value>
            <value>
                <fullName>Dasani Purefill</fullName>
            </value>
            <value>
                <fullName>Fountain</fullName>
            </value>
            <value>
                <fullName>Freestyle</fullName>
            </value>
            <value>
                <fullName>Option Needed</fullName>
            </value>
            <value>
                <fullName>Smart Café</fullName>
            </value>
            <value>
                <fullName>Vending machine</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>