force-app/main/default/objects/Case/fields/Escalation_Cause_1__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Cause_1__c</fullName>
    <label>Cause of Escalation 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Set Up Machine Code</fullName>
            </value>
            <value>
                <fullName>Set Up Bottler Code</fullName>
            </value>
            <value>
                <fullName>Set Up Product Code</fullName>
            </value>
            <value>
                <fullName>Bluetooth Function Light&apos;s Off</fullName>
            </value>
            <value>
                <fullName>Field Survey</fullName>
            </value>
            <value>
                <fullName>Fix Up VM Location</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Check Up Machine Code</fullName>
            </value>
            <value>
                <fullName>Check Up Column Record</fullName>
            </value>
            <value>
                <fullName>Misloading, or stuck at column</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Request for VM Installation</fullName>
            </value>
            <value>
                <fullName>Check Up Alternative Set-Up</fullName>
            </value>
            <value>
                <fullName>AppID Investigation</fullName>
            </value>
            <value>
                <fullName>AppID Delete</fullName>
            </value>
            <value>
                <fullName>Personal Information Delete</fullName>
            </value>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Resign</fullName>
            </value>
            <value>
                <fullName>Redelivery</fullName>
            </value>
            <value>
                <fullName>Exchange pops</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Stuck on VM Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>