force-app/main/default/objects/Case/fields/Escalation_Cause_2__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Cause_2__c</fullName>
    <label>Cause of Escalation 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fix Up VM Location</fullName>
            </value>
            <value>
                <fullName>Check Up Machine Code</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Request for VM Installation</fullName>
            </value>
            <value>
                <fullName>Check Up Alternative Set-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>