force-app/main/default/objects/Case/fields/Escalation_Destination__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Destination__c</fullName>
    <label>Escalation Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IMJ</fullName>
            </value>
            <value>
                <fullName>Hokkaido CCBC</fullName>
            </value>
            <value>
                <fullName>Michinoku CCBC</fullName>
            </value>
            <value>
                <fullName>CCBJI(Okegawa)</fullName>
            </value>
            <value>
                <fullName>CCBJI(Nagoya)</fullName>
            </value>
            <value>
                <fullName>CCBJI(CCEJ HQ)</fullName>
            </value>
            <value>
                <fullName>CCBJI(Osaka CC)</fullName>
            </value>
            <value>
                <fullName>CCBJI(Fukuoka CC)</fullName>
            </value>
            <value>
                <fullName>CCBJI(CCW HQ)</fullName>
            </value>
            <value>
                <fullName>Hokuriku CCBC</fullName>
            </value>
            <value>
                <fullName>Okinawa CCBC</fullName>
            </value>
            <value>
                <fullName>Conlux</fullName>
            </value>
            <value>
                <fullName>SUMIT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>COC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>