force-app/main/default/objects/Case/fields/Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Price__c</fullName>
    <inlineHelpText>Please enter half-width numbers</inlineHelpText>
    <label>Resolution Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>