force-app/main/default/objects/Case/fields/Examized_sample__c.field-meta.xml
<CustomField>
    <fullName>Examized_sample__c</fullName>
    <label>Examized sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Result confirmed</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Not specified</fullName>
                <isActive>false</isActive>
                <label>Not specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>