force-app/main/default/objects/Case/fields/Exchange_Description__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Description__c</fullName>
    <label>Exchange Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>